se incluyeron animaciones

--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -11,5 +11,6 @@
 @use './components/portafolio';
 @use './components/modal';
 @use './components/carrusel';
+@use './components/colaboraciones';
 
 // screens
