--- a/src/styles/components/_carrusel.scss
+++ b/src/styles/components/_carrusel.scss
@@ -2,7 +2,7 @@
 .swiper{
     // width: 500px;
     // height: 500px;
-    min-width: 300px;
+    min-width: 200px;
     padding: 0;
     // display: flex;
     // align-items: flex-start;
@@ -21,6 +21,10 @@
             object-fit: contain;
             margin: auto;
         }
+    }
+
+    @media screen and (max-width: 630px){
+        font-size: 32px;
     }
 
 }
