--- a/src/styles/components/_hero.scss
+++ b/src/styles/components/_hero.scss
@@ -35,10 +35,14 @@
                 color: white;
                 font-size: 50px;
                 font-weight: bold;
-                width: 60%;
+                width: 100%;
                 text-align: center;
                 padding: 0;
                 margin-top: 30px;
+
+                @media screen and (max-width: 630px){
+                    font-size: 32px;
+                }
                 
             }
         }
