--- a/src/styles/components/_modal.scss
+++ b/src/styles/components/_modal.scss
@@ -6,7 +6,7 @@
     left: 0;
     width: 100%;
     height: 100%;
-    background-color: #00000080;    
+    background-color: #00000080;
 
     .modal{
         height: 100vh;
@@ -15,6 +15,14 @@
         background-color: white;
         display: flex;
         flex-direction: column;
+        animation: AbrirModal .7s;
+
+        @media screen and (max-width: 780px){
+            width: 70%;
+        }
+        @media screen and (max-width: 450px){
+            width: 80%;
+        }
 
 
         &__container_slider{
@@ -26,7 +34,6 @@
         }
 
         .section_datos{
-            // flex: 1;
             height: 230px;
             padding: 20px;
 
@@ -37,6 +44,19 @@
                 padding-bottom: 5px;
                 margin-bottom: 0;
                 width: max-content;
+                @media screen and (max-width: 580px){
+                    font-size: 26px;
+                }
+                @media screen and (max-width: 630px){
+                    margin-top: 0px;
+                    font-size: 22px;
+                    width: auto;
+                }
+            }
+            p{
+                @media screen and (max-width: 580px){
+                    font-size: 14px;
+                }
             }
 
             div{
@@ -74,7 +94,6 @@
                         svg{
                             color: white;
                         }
-
                     }
 
                     svg{
@@ -91,6 +110,16 @@
 
 
     }
+
+    @keyframes AbrirModal {
+        0%{
+            opacity: 0;
+        }
+        100%{
+            opacity: 1;
+        }
+    }
+
 
 }
 .open{
