--- a/src/styles/components/_portafolio.scss
+++ b/src/styles/components/_portafolio.scss
@@ -53,6 +53,19 @@
             overflow: hidden;
             position: relative;
 
+            @media screen and (max-width: 400px){
+                width: 100%;
+                height: 150px;
+                background-size: contain;
+                background-position: left;
+            }
+            @media screen and (max-width: 630px){
+                width: 100%;
+                height: 200px;
+                background-size: contain;
+                background-position: center;
+            }
+
             .covertor{
                 position: absolute;
                 width: 100%;
@@ -70,12 +83,18 @@
                 h4{
                     margin: 0;
                     color: #1b242f;;
+                    @media screen and (max-width: 400px){
+                        padding: 0 10px;
+                    }
                 }
 
                 p{
                     color:#1b242f;
                     color: #e31b6d;
                     font-weight: bold;
+                    @media screen and (max-width: 400px){
+                        padding: 0 10px;
+                    }
                 }
                 button{
                     background-color: white;
